[project]
name = "llamaindex-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.113.0",
    "liteparse>=2.7.0",
    "llama-index>=0.14.23",
    "mlx>=0.32.0",
    "mlx-lm>=0.31.3",
    "mlx-vlm>=0.6.4",
]
